# mesofield

./: .gitignore  LICENSE  README.md  dev.yaml  hardware.yaml  mesofield.yml  pyproject.toml  requirements.txt  setup.py  test_procedure_integration.py
mesofield/: __init__.py  __main__.py  base.py  config.py  custom_procedure.py  engines.py  hardware.py  params.json  procedures.py  startup.py
mesofield/data/: __init__.py  batch.py  check_codec.py  load.py  manager.py  writer.py
mesofield/data/proc/: __init__.py  analysis.py  crop_enhance_mp4.py  load.py  plot.py  transform.py
mesofield/engines/: __init__.py  enginedev.py  mesoengine.py  pupilengine.py
mesofield/examples/: custom_procedure_guide.md  custom_procedures.py  example_device.py  threading_example.py
mesofield/gui/: __init__.py  controller.py  dynamic_controller.py  maingui.py  mdagui.py  speedplotter.py  viewer.py
mesofield/gui/widgets/: __init__.py  controller.py  mdagui.py  speedplotter.py  viewer.py
mesofield/io/: __init__.py  arducam.py  encoder.py  h5db.py  manager.py  sessiondb.py  treadmill.py  writer.py
mesofield/io/devices/: __init__.py  cameras.py  daq.py  encoder.py  lick.py  treadmill.py
mesofield/processing/: batch.py  plot.py
mesofield/protocols/: __init__.py  mixins.py
mesofield/subprocesses/: psychopy.py
mesofield/utils/: _logger.py  utils.py
tests/: conftest.py  dev.yaml  devcfg.json  devsub.json  test_base.py  test_config.py  test_data_saving.py  test_dataqueue.py  test_mda.py  test_procedures.py  test_psychopy.py  test_refresh_db.py  test_widgets.py  test_workflow.py
